--- a/S_Coder/css/noteDetail.css
+++ b/S_Coder/css/noteDetail.css
@@ -49,6 +49,9 @@ h1,h2,h3,h4,h5,h6,{font-weight: normal;}
 	position: relative;
 	font-size: 12px;
 }
+.note_content{
+	min-height: 250px;
+}
 #commentNum{
 	position: absolute;
 	right: 1%;
