--- a/S_Coder/css/new_file.css
+++ b/S_Coder/css/new_file.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6,{font-weight: normal;}
 .header .cover{position: absolute;top:0;}
 .header .back{width:5%;position: absolute;top: 4%;left: 3%;}
 .header .h1{font-family: arial;color:#5272f9;text-transform: uppercase;font-weight: 600;font-size: 30px;letter-spacing: 3px;position: absolute;top: 20%;left: 3%;}
-.header p{font-family:"NotoSansHans-Regular";font-size: 12px;color: #999;position: absolute;top: 30%;left: 3%;}
+.header .h2{    font-family: arial;color: #999999;text-transform: uppercase;font-size: 12px;letter-spacing: 3px;position: absolute;top: 31%;left: 3%;}
 .header .touxian{width:30%;position: absolute;top: 42%;left: 3%;}
 #file{position: absolute;top: 70%;left: 3%;width: 20%;}
 .header .job img{width: 15px;}
